# sift

./: .gitignore  CMakeLists.txt  README.md  dev  run.sh
.cache/clangd/index/: cluster.hpp.8603A2A81BA400ED.idx  dHash.cpp.4A6382C1CBF1D723.idx  hash.hpp.4AD67F159CBD36DC.idx  hdbscan.cpp.8659F8CA5D9BA308.idx  io.hpp.25D43A5C833112AC.idx  main.cpp.A9CE9C37DE5FE2D9.idx  pHash.cpp.73370ED8EE51BFEF.idx  scanner.cpp.76ABA76748D2036B.idx  stb_image.h.A90646F05178870C.idx  stb_image_resize2.h.4E74E33512F15756.idx  thresh.cpp.46B975499F787A46.idx  wHash.cpp.60F6741E1609B168.idx  writer.cpp.04A83D53E9EDE658.idx
POC/: .gitignore  README.md  project-dev.md  pyproject.toml  requirements.txt  run.sh
POC/scripts/: cluster_utils.py  hash_algorithms.py  hash_utils.py  io_utils.py  mediahash.py
src/: main.cpp  stb_impl.cpp
src/cluster/: cluster.hpp  distance.cpp  hdbscan.cpp  hierarchical.cpp  thresh.cpp
src/core/: threadpool.hpp
src/hash/: dHash.cpp  hash.hpp  image.cpp  pHash.cpp  wHash.cpp
src/io/: io.hpp  json_parse.cpp  scanner.cpp  writer.cpp
